internal/composer: add OpenSCAP tailoring
Add the ability to specify selected and and selected rules in the
OpenSCAP customizations. This allows users to create a tailoring file
which extends the base profile.
